# plexmcp

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  ACCOMPLISHMENTS.md  ASSESSMENT.md  CHANGELOG.md  CLIENT_DISCOVERY_FIX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FIXES_APPLIED.md  GLAMA_INTEGRATION_SUMMARY.md  GLAMA_RESCAN_REQUEST.txt  README.md  SECURITY.md  STATUS_2026-01-08.md  WEBAPP_SETUP_GUIDE.md  build.ps1  build_dxt.py  coverage.xml  extension.toml  glama.json  glama.yml  manifest.json  mcpb.json  plexmcp.dxt  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_clients.py  test_fastmcp.py  test_imports_backup.py  test_imports_fix.py  test_imports_quick.py  test_list_libraries.py  test_plex_imports.py  verify_dxt.py  verify_setup.py
.github/workflows/: build-dxt.yml  build-mcpb.yml  ci.yml  version-bump.yml
config/: mcp_config.yaml  settings.yaml
data/secrets/: jwt_secret.txt
docs/: COMPLETE_FIX_GUIDE.md  DXT_BUILDING_GUIDE.md  FASTMCP_2.12_MIGRATION.md  MCPB_PACKAGING_STANDARDS.md  STANDARDS.md  STATUS_REPORT_2025_11_03.md  WINDSURF_IMPROVEMENTS_ASSESSMENT.md  configuration.md  development.md  index.md  installation.md  troubleshooting.md  usage.md  windsurf_assessment.md
docs/api/: index.md
docs/github/: COMPLETE_SETUP_GUIDE.md  README.md
dxt_test/: README.md  dxt_manifest.json  manifest.json  pyproject.toml  requirements.txt  test_imports_debug.py
dxt_test/plex/: media_operations.py  session_manager.py
dxt_test/prompts/: 1_general_plex_management.txt  2_anime_weeb_optimization.txt  6_european_content_discovery.txt  7_remote_control_multidevice.txt
dxt_test/src/plex_mcp/: __init__.py  config.py  plex_manager.py  server.py
dxt_test/src/plex_mcp/api/: playback.py  vienna.py
dxt_test/src/plex_mcp/models/: media.py  playback.py  playlists.py  quality.py
dxt_test/src/plex_mcp/services/: admin_service.py  playlist_service.py  plex_media_service.py  plex_service.py
dxt_test/src/plex_mcp/utils/: __init__.py  config.py  logging_utils.py
plex/: __init__.py  library_operations.py  manager.py  media_operations.py  session_manager.py  user_manager.py
prompts/: 3_movie_night_decision_maker.txt  4_performance_optimization.txt  5_home_theater_enthusiast.txt
scripts/: build-mcpb-package.ps1  convert-to-internal-helpers.ps1  restart_claude_and_check_mcp.ps1
src/: lib.rs
src/plex_mcp/: __init__.py  __main__.py  app.py  config.py  main.py  mcp_setup.py  plex_manager.py  server.py  server.py.bak  server_fixed_head.py  server_minimal.py
src/plex_mcp/api/: __init__.py  admin.py  core.py  core_original.py  playback.py  playlists.py  vienna.py
src/plex_mcp/models/: __init__.py  admin.py  core.py  media.py  playback.py  playlists.py  quality.py  server.py  session.py  user.py  vienna.py
src/plex_mcp/services/: __init__.py  admin_service.py  base.py  playlist_service.py  plex_media_service.py  plex_service.py  plex_service.py.bak  vienna_service.py
src/plex_mcp/tools/: __all__.py  __init__.py  agentic.py  library.py  media.py  organization.py  playlists.py  quality.py  server.py  sessions.py  users.py
src/plex_mcp/tools/portmanteau/: __init__.py  audio_mgr.py  collections.py  help.py  integration.py  library.py  (+11 more)
src/plex_mcp/utils/: __init__.py  async_utils.py  config.py  error_handling.py  logging_utils.py  network.py  validation.py
tests/: README.md  TEST_COVERAGE_REPORT.md  TEST_STRATEGY.md  __init__.py  conftest.py  test_config.py  test_fixture_db.py  test_integration_real_plex.py  test_main.py  test_portmanteau_collections.py  test_portmanteau_integration.py  test_portmanteau_library.py  test_portmanteau_media.py  test_portmanteau_metadata.py  test_portmanteau_performance.py  test_portmanteau_playlist.py  test_portmanteau_search.py  test_portmanteau_server.py  test_portmanteau_streaming.py  test_portmanteau_user.py
tests/fixtures/: .gitkeep  README.md  __init__.py  create_fixtures.py
